--- a/views/getBeers.pug
+++ b/views/getBeers.pug
@@ -2,7 +2,9 @@ extends layout
 
 block content
     div
-        each item in data
+        h1 #{breweries[0].name}
+        each item in beers
             div
                 h2 #{item.name}
+                //h4 #{breweries[item.brewery_id].name}
                 p #{item.descript}
