--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,8 @@ block content
   div
       a(href='/getBeers')
         h1 get beers
+      a(href='/getBreweries')
+          h1 get breweries
       each item,i in data
         - var colapse="colapse"+i;
             div
