add Filter Breweries

--- a/views/getBeer.pug
+++ b/views/getBeer.pug
@@ -5,6 +5,7 @@ block content
       each item,i in data
         - var colapse="colapse"+i;
             div
-              h2 #{item.name}
+              a(href='/getBreweries?country='+ #{item.name}) 
+                  h2 #{item.name}
               h4 #{item.shortName}
               p #{item.description}
