--- a/views/getBreweries.pug
+++ b/views/getBreweries.pug
@@ -5,5 +5,6 @@ block content
         //h1 #{breweries[0].name}
         each item in breweries
             div
-                h2 #{item.name}
+                a(href="/getBeers?brewery_id="+ item.id)
+                    h2 #{item.name}
                 p #{item.country}
