--- a/views/index.pug
+++ b/views/index.pug
@@ -8,3 +8,48 @@ block content
           h1 get breweries
       a(href='/getBeer')
           h1 get beer old
+      script(type="text/javascript" src="https://www.gstatic.com/charts/loader.js")
+      script.
+          // Load the Visualization API and the corechart package.
+             google.charts.load('current', {'packages':['corechart']});
+
+             // Set a callback to run when the Google Visualization API is loaded.
+             google.charts.setOnLoadCallback(drawChart);
+
+             // Callback that creates and populates a data table,
+             // instantiates the pie chart, passes in the data and
+             // draws it.
+             function drawChart() {
+
+               // Create the data table.
+               var data = new google.visualization.DataTable();
+               data.addColumn('string', 'Country');
+               data.addColumn('number', 'count');
+               var arr=[];
+                 !{JSON.stringify(countries)}.forEach(function (t) {
+                   var a=[];
+                   a.push(t.name);
+                   a.push(t.count);
+                   arr.push(a)
+               })
+                 data.addRows(arr)
+
+               /*data.addRows([
+                 ['Mushrooms', 3],
+                 ['Onions', 1],
+                 ['Olives', 1],
+                 ['Zucchini', 1],
+                 ['Pepperoni', 2]
+               ]);
+               */
+               // Set chart options
+               var options = {'title':'How Much Pizza I Ate Last Night',
+                              'width':700,
+                              'height':600};
+
+               // Instantiate and draw our chart, passing in some options.
+               var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+               chart.draw(data, options);
+             }
+
+      div(id="chart_div")
