--- a/views/index.pug
+++ b/views/index.pug
@@ -43,9 +43,11 @@ block content
                ]);
                */
                // Set chart options
-               var options = {'title':'How Much Pizza I Ate Last Night',
-                              'width':700,
-                              'height':600};
+                 var options = {
+                     'title': 'How Much brewery in the world',
+                     'width': 700,
+                     'height': 600
+                 };
 
                // Instantiate and draw our chart, passing in some options.
                var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
