--- a/views/index.pug
+++ b/views/index.pug
@@ -8,6 +8,8 @@ block content
           h1 get breweries
       a(href='/getBeer')
           h1 get beer old
+      a(href='/api')
+        h1 api
       script(type="text/javascript" src="https://www.gstatic.com/charts/loader.js")
       script.
           // Load the Visualization API and the corechart package.
