--- a/views/getBreweries.pug
+++ b/views/getBreweries.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
     div
+
         h1 #{breweries_geocode[0].latitude}
         //h1 #{breweries[0].name}
         each item in breweries
@@ -14,3 +15,14 @@ block content
                 p lattitude #{location.latitude}
                 p longitude #{location.longitude}
                 -}
+    script.
+        function myMap() {
+        var mapProp= {
+            center:new google.maps.LatLng(51.508742,-0.120850),
+            zoom:5,
+        };
+        var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+        }
+
+
+    script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hA_r-vEy3trOhThRoSgbTv9EkjGX-ok")
