--- a/views/getBreweries.pug
+++ b/views/getBreweries.pug
@@ -15,14 +15,38 @@ block content
                 p lattitude #{location.latitude}
                 p longitude #{location.longitude}
                 -}
+        div(id='map' style='height:400px;width:100%;')
     script.
-        function myMap() {
-        var mapProp= {
-            center:new google.maps.LatLng(51.508742,-0.120850),
-            zoom:5,
-        };
-        var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
-        }
-
-
-    script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hA_r-vEy3trOhThRoSgbTv9EkjGX-ok")
+      var map;
+      function initMap(){
+        console.log("Init")
+        map = new google.maps.Map(document.getElementById('map'),{
+            center: { lat: 50, lng: 50 },
+            zoom: 8
+        });
+        var geocoder = new google.maps.Geocoder()
+        geocodeAddress(geocoder,map)
+        addMarks(map)
+      }
+      function geocodeAddress(geocoder, resultsMap) {
+        var address = "Ukraine";
+        var arr = !{JSON.stringify(breweries[0])};
+        address = arr.country;
+        console.log(address);
+        geocoder.geocode({'address': address}, function(results, status) {
+          if (status === 'OK') {
+            resultsMap.setCenter(results[0].geometry.location);
+          } else {
+            alert('Geocode was not successful for the following reason: ' + status);
+          }
+        });
+      }
+      function addMarks(map){
+                 !{JSON.stringify(breweries_geocode)}.forEach(function (t) {
+                   var marker = new google.maps.Marker({
+                      map: map,
+                      position:{lat:t.latitude, lng:t.longitude},
+                    });
+               });
+      }
+    script(async, defer, src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hA_r-vEy3trOhThRoSgbTv9EkjGX-ok&callback=initMap")
