--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    meta(name="viewport" content="initial-scale=1.0")
+    meta(charset="utf-8")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
