--- a/views/getBreweries.pug
+++ b/views/getBreweries.pug
@@ -3,7 +3,7 @@ extends layout
 block content
     div
 
-        h1 #{breweries_geocode[0].latitude}
+        //h1 #{breweries_geocode[0].latitude}
         //h1 #{breweries[0].name}
         each item in breweries
             div
@@ -12,17 +12,23 @@ block content
                 p #{item.country}
                 - var location=breweries_geocode.find(function(elem){ return item.id === elem.brewery_id })
                 -if (location){
-                p lattitude #{location.latitude}
-                p longitude #{location.longitude}
+                    p lattitude #{location.latitude}
+                    p longitude #{location.longitude}
                 -}
+    div(id="map" style="width:100%;height:400px;")
     script.
-        function myMap() {
-        var mapProp= {
-            center:new google.maps.LatLng(51.508742,-0.120850),
-            zoom:5,
-        };
-        var map=new google.maps.Map(document.getElementById("googleMap"),mapProp);
+        function initMap() {
+
+            var uluru = {lat: -25.363, lng: 131.044};
+
+            var map = new google.maps.Map(document.getElementById('map'), {
+                zoom: 4,
+                center: uluru
+            });
+            var marker = new google.maps.Marker({
+                position: uluru,
+                map: map
+            });
         }
-
-
+        initMap()
     script(src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB7hA_r-vEy3trOhThRoSgbTv9EkjGX-ok")
