--- a/views/index.pug
+++ b/views/index.pug
@@ -6,7 +6,7 @@ block content
         h1 get beers
       a(href='/getBreweries')
           h1 get breweries
-      a(href='/getBeer')
+      //a(href='/getBeer')
           h1 get beer old
       a(href='/api')
         h1 api
@@ -56,9 +56,10 @@ block content
                chart.draw(data, options);
              }
 
-      div(id="chart_div")
       each item in countries
-          div
-             a(href="/getBreweries?country="+ item.name)
-                h2 #{item.name}
-             h4 #{item.count}
+          ul(class="list-group")
+            li(class="list-group-item")
+                a(href="/getBreweries?country="+item.name)
+                    h2 #{item.name}
+                h4 #{item.count}
+  div(id="chart_div")
