--- a/views/setComments.pug
+++ b/views/setComments.pug
@@ -7,4 +7,12 @@ block content
             input(type="text" class="form-control" name="name" id="user")
             label(for="comment") Comment:
             textarea(class="form-control" name="comment" form="form_container" rows="5" id="comment")
+            div(class="form-group")
+                label(for="sel1") Select mark
+                    select(class="form-control" form="form_container" name="mark" id="sel1")
+                        option 1
+                        option 2
+                        option 3
+                        option 4
+                        option 5
             button(type="submit" class="btn btn-default") Submit
