--- a/views/showComments.pug
+++ b/views/showComments.pug
@@ -9,4 +9,5 @@ block content
                             div(class="media-body")
                                 div(class="well well-lg")
                                     h4(class="media-heading text-uppercase reviews") #{item.name}
+                                        span(class="badge badge-default") Mark #{item.mark}
                                     p(class="media-comment") #{item.comment}
