--- a/views/getBeer.pug
+++ b/views/getBeer.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   div(id='brewery_container' class="container")
-    h1 Brewery List
+    h1 Beer's styles
     each item,i in data
         ul(class="list-group")
                 li(class="list-group-item")
